tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_incorrect_generic_count_on_type_alias/execute__tests__noirc_frontend_tests_incorrect_generic_count_on_type_alias_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Foo expects 0 generics but 1 was given
  ┌─ src/main.nr:3:20
  │
3 │     pub type Bar = Foo<i32>;
  │                    ---
  │

Aborting due to 1 previous error
