tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_incorrect_generic_count_on_type_alias/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Foo expects 0 generics but 1 was given
  ┌─ src/main.nr:3:20
  │
3 │     pub type Bar = Foo<i32>;
  │                    ---
  │

Aborting due to 1 previous error
